--- a/css/index.css
+++ b/css/index.css
@@ -179,6 +179,20 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+}
+.header h1 {
+  display: inline;
+}
+.header .nav {
+  padding: 1 rem;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
