--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,3 +1,18 @@
+.header {
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  .containerize(800px, 100%);
+  h1 {
+      display:inline;
+  }
+
+  .nav {
+      padding: 1 rem;
+  }
+}
+
 .home {
 
   .content-section {
