--- a/less/index.less
+++ b/less/index.less
@@ -10,12 +10,8 @@
 
 @import "variables";
 @import "mixins";
-
 @import "reset";
-@import "general-styles";
-
-@import "header";
-@import "cta";
-@import "main-content";
-@import "contact";
+@import "global";
+@import "navigation";
 @import "footer";
+@import "home-page";
