--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,12 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+h1 {
+  display: inline;
+}
+.nav {
+  padding: 1 rem;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -186,12 +192,6 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
-}
-.header h1 {
-  display: inline;
-}
-.header .nav {
-  padding: 1 rem;
 }
 .home .content-section {
   margin: 30px 0;
