--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,9 +1,15 @@
 .header {
-  display:flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 auto;
-  .containerize(800px, 100%);
+  
+  height:6rem;
+  margin: 2rem auto;
+  border-bottom: 2px dashed @navigation-border;
+
+  div {
+    .containerize(800px, 100%);
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .home {
