--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,9 +1,15 @@
 // Navigation Styles here
 
-h1 {
-    display:inline;
+body .header nav {
+    
+    a {
+        padding:3rem;
+        font-size:1.6rem;
+    }
+
+    h1 {
+        display:inline;
+    }
+
 }
 
-.nav {
-    padding: 1 rem;
-}
