desktop site finalized

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,5 +4,15 @@
     max-width: @mw;
     width: @wp;
     margin: 0 auto;
+    flex-wrap: wrap;
 }
 
+.btn {
+    width:85%;
+    font-size:2rem;
+    text-align:center;
+    background-color: @button-bg;
+    border-radius: 10px;
+    padding:15px;
+    color:@white;
+}
