--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,12 @@
+.btn {
+  width: 85%;
+  font-size: 2rem;
+  text-align: center;
+  background-color: #17A2B8;
+  border-radius: 10px;
+  padding: 15px;
+  color: #FFFFFF;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -169,7 +178,7 @@ img {
   margin: 0 auto;
 }
 body .header nav a {
-  padding: 3rem;
+  padding: 2rem;
   font-size: 1.6rem;
 }
 body .header nav h1 {
@@ -187,17 +196,33 @@ body .header nav h1 {
   padding: 20px;
 }
 .header {
-  height: 6rem;
-  margin: 2rem auto;
+  margin: 0 auto;
   border-bottom: 2px dashed #C0C0C0;
 }
-.header div {
+.header .headerTOP {
+  height: 9rem;
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+  flex-wrap: wrap;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.home .cta {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  display: block;
+  padding-bottom: 1.75rem;
+  border-bottom: 2px dashed #C0C0C0;
+}
+.home .cta img {
+  width: 100%;
+}
+.home .cta h1 {
+  padding: 1.5rem 0;
 }
 .home .content-section {
   margin: 30px 0;
