--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,10 +1,10 @@
 .header {
   
-  height:6rem;
-  margin: 2rem auto;
+  margin: 0 auto;
   border-bottom: 2px dashed @navigation-border;
 
-  div {
+  .headerTOP {
+    height:9rem;
     .containerize(800px, 100%);
     display:flex;
     justify-content: space-between;
@@ -13,7 +13,21 @@
 }
 
 .home {
+  .cta {
+    .containerize(800px, 100%);
+    display:block;
+    padding-bottom:1.75rem;
+    border-bottom: 2px dashed @navigation-border;
 
+
+    img {
+      width:100%;
+    }
+
+    h1 {
+      padding:1.5rem 0;
+    }
+  }
   .content-section {
     margin: 30px 0;
     display: flex;
