button mixin complete

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -7,9 +7,9 @@
     flex-wrap: wrap;
 }
 
-.btn {
-    width:85%;
-    font-size:2rem;
+.buttonizer(@w, @fs){
+    width:@w;
+    font-size:@fs;
     text-align:center;
     background-color: @button-bg;
     border-radius: 10px;
