--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,3 @@
-.btn {
-  width: 85%;
-  font-size: 2rem;
-  text-align: center;
-  background-color: #17A2B8;
-  border-radius: 10px;
-  padding: 15px;
-  color: #FFFFFF;
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -269,4 +260,13 @@ body .header nav h1 {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .btn {
+  width: 85%;
+  font-size: 2rem;
+  text-align: center;
+  background-color: #17A2B8;
+  border-radius: 10px;
+  padding: 15px;
+  color: #FFFFFF;
 }
