--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,6 +7,26 @@ body .header nav {
         font-size:1.6rem;
     }
 
+    a:link {
+        text-decoration:none;
+        color:@black;
+    }
+
+    a:visited {
+        text-decoration:none;
+        color:@black;
+    }
+
+    a:hover {
+        text-decoration:underline;
+        color:@black;
+    }
+
+    a:active {
+        text-decoration: underline;
+        color:@black;
+    }
+
     h1 {
         display:inline;
     }
