--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,6 @@
 //Responsive assignments
-@mobile:~'max-width:500px';
+@mobile:~'(max-width:500px)';
+
 
 // Color assignments 
 @font-color: @shark;
@@ -9,6 +10,7 @@
 @footer-bg: @sandy-beach;
 
 // Colors
+@black: #000000;
 @white: #FFFFFF;
 @silver: #C0C0C0;
 @shark: #212529;
@@ -18,3 +20,42 @@
 //Misc
 
 @signmeup:~'85%, 2rem';
+
+.header {
+    @media @mobile {
+        .containerize(800px, 96%);
+        padding:0 2rem;
+    }
+    
+    .headerTOP {
+        @media @mobile {
+            justify-content: center;
+            text-align:center;
+            flex-direction: column;
+        }
+    }
+}
+
+.home {
+    @media @mobile {
+
+    }
+
+    .cta {
+        @media @mobile {
+            .containerize(450px, 100%);
+      
+        }
+    }
+
+    .content-section {
+        @media @mobile {
+            display:flex;
+            flex-direction: column;
+        }
+
+        .text-content {
+            width:100%;
+        }
+    }
+}
