mobile complete, ready for submit

--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,5 @@
 //Responsive assignments
-@mobile:~'(max-width:500px)';
+@mobile: ~'(max-width:500px)';
 
 
 // Color assignments 
@@ -57,7 +57,7 @@
             max-width:450px;
         }
     }
-    .content-destination {
+    .home section {
         width:100%;
         max-width:450px;
     }
@@ -73,8 +73,11 @@
 }
 
 @media @mobile {
-    .home .content-pick .destination {
-        width:125px;
-    
+    body .text-content {
+        width:100%;
+    }
+
+    body .content-pick .destination {
+        width:400px;
     }
 }
