--- a/css/index.css
+++ b/css/index.css
@@ -37,7 +37,7 @@
     width: 100%;
     max-width: 450px;
   }
-  .content-destination {
+  .home section {
     width: 100%;
     max-width: 450px;
   }
@@ -49,8 +49,11 @@
   }
 }
 @media (max-width:500px) {
-  .home .content-pick .destination {
-    width: 125px;
+  body .text-content {
+    width: 100%;
+  }
+  body .content-pick .destination {
+    width: 400px;
   }
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -296,9 +299,19 @@ body .header nav h1 {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width:500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width:500px) {
+  .home .content-section .img-content {
+    width: 100%;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -319,6 +332,11 @@ body .header nav h1 {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width:500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
 }
@@ -332,6 +350,11 @@ body .header nav h1 {
   width: 30%;
   margin-bottom: 30px;
 }
+@media (max-width:500px) {
+  .home .content-pick .destination {
+    width: 100%;
+  }
+}
 .home .content-pick .btn {
   width: 85%;
   font-size: 2rem;
@@ -340,4 +363,9 @@ body .header nav h1 {
   border-radius: 10px;
   padding: 15px;
   color: #FFFFFF;
+}
+@media (max-width:500px) {
+  .home .content-pick .btn {
+    width: 100%;
+  }
 }
