--- a/less/home-page.less
+++ b/less/home-page.less
@@ -37,12 +37,20 @@
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        width:100%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
-      
+
+      @media @mobile {
+        width:100%;
+      }
+
       img {
         border-radius: 10px;
       }
@@ -67,6 +75,9 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+    @media @mobile {
+      width:100%;
+    }
 
     img {
       border-radius: 10px;
@@ -82,10 +93,16 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      @media @mobile {
+        width:100%;
+      }
     }
 
     .btn {
       .buttonizer(85%, 2rem);
+      @media @mobile {
+        width:100%;
+      }
     }
   }
 }// home
